<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="internet_connection_offline_text_short">No internet available.</string>
    <string name="customer_support_message">Call with customer support is available from 6 AM to 12 Midnight. For now, you can leave a mail or have a chat with customer support.</string>
    <string name="customer_support_select_title">Select a number</string>
    <string name="support_call1" translatable="false">9829213213</string>
    <string name="create">Create</string>
    <string name="justnow">Just Now</string>
    <string name="activity_live_class">Live Class</string>
    <string name="view_rank">VIEW RESULT</string>
    <string name="support_call2" translatable="false">9116691119</string>
    <string name="support_email" translatable="false">support@utkarsh.com</string>
    <string name="invitestring">I recommend you to learn from next-gen Smart courses. Uncover a whole new way of learning with Utkarsh.
        Learn, practice &amp; create custom tests and much more.
Download http://bit.ly/2K27grQ and start learning now!!</string>
    <string name="app_version" translatable="false">App Version</string>
    <string name="makebettertext">We collect crash reports and other diagnostic data to make the app better</string>
    <string name="settings_activity">Settings</string>
    <string name="screen_mirror_dialog_msg">1. List of Google approved Android <a href="https://www.android.com/intl/en_in/tv/">TVs that support screen mirroring</a>\n\n2. If your TV is not on the list then with the help of Google Chrome Cast, screen mirroring can be done. Please see the below link,\n<a href="https://support.google.com/chromecast/answer/6006232?hl=en-IN">How to connect google Chromecast</a>\n\n3. Download Videos will not come while screen mirroring</string>
    <string name="libraries_used">Libraries Used</string>
    <string name="libusedtext">The following is a list of third party software that has been used in portions of the Wonderslate product.</string>
    <string name="open_source_library_activity">Open Source Libraries</string>
    <string name="logout_text">Logout</string>
    <string name="copyrighttext">© 2021 Utkarsh Classes and Edutech Pvt. Ltd.\nAll rights reserved.</string>
    <string name="about_us_text">About</string>
    <string name="other"><u>Other</u></string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="term_of_service_text">Terms of Service</string>
    <string name="open_source_libraries_text">Open Source Libraries</string>
    <string name="built_by_wonderslate_text">Built by Utkarsh</string>
    <string name="leave_us_a_review_text">Leave us a Review.</string>
    <string name="help_wonderslate_text">Help make Utkarsh better</string>
    <string name="error_generic">Playback failed</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for %1$s</string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for %1$s</string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder %1$s</string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="app_name">Utkarsh</string>
    <string name="allcourses">All Courses</string>
    <string name="mycourse">My Courses</string>
    <string name="specialities">Specialities</string>
    <string name="savedNotes">Saved Notes</string>
    <string name="course">Courses</string>
    <string name="feedback">Feedback</string>
    <string name="facebook_app_id">3269478913096833</string>
    <string name="fb_login_protocol_scheme">fb3269478913096833</string>
    <string name="video">Videos</string>
    <string name="appSettings">App Settings</string>
    <string name="Settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="finishQuiz">Are you sure you want to submit this test?\nyou can\'t edit once you submit. </string>
    <string name="pauseQuiz">Are you sure you want to pause this test?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="verfiy">Verify &amp; Continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_sml">Login</string>
    <string name="changepassowrd_new_password">Enter a new Password</string>
    <string name="changepassowrd_retype_password">Confirm Password</string>
    <string name="add_note_message">Add your selected text to saved on notes</string>
    <string name="save">SAVE</string>
    <string name="cancel">Cancel</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="notification">Notification</string>
    <string name="change_password">Change Password</string>
    <string name="forget_password">Forgot Password</string>
    <string name="pin_content_desc">PIN input field</string>
    <string name="jsonparsing_error_message">Something went wrong with server</string>
    <string name="internet_error_message">No internet connection found.\n Check your Connection</string>
    <string name="exception_api_error_message">Something went wrong kindly try again</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="pdf_extension">.pdf</string>
    <string name="doc_extension">.doc</string>
    <string name="xls_extension">.xls</string>
    <string name="file_format_error">This file format is not supported</string>
    <string name="logout_confirmation_message">Are you sure you want to logout?</string>
    <string name="logout_title">Logout</string>
    <string name="description">Description</string>
    <string name="verify_your_one_time_otp">Verify your OTP number</string>
    <string name="enter_code_sent">Enter the 6 digit code we just sent you to verify your account.</string>
    <string name="update_app_dialog_title">Update App</string>
    <string name="maintain_app_dialog_title">On Maintenance</string>
    <string name="update_app_dialog_message">You are using older version of app.\n Kindly update it from PlayStore</string>
    <string name="maintain_app_dialog_message">App is now on Maintenance so please close your app.</string>
    <string name="seeAll">See All</string>
    <string name="faq_title">FAQ\'s</string>
    <string name="submit_rev">Submit</string>
    <string name="prev">Previous</string>
    <string name="leaderboard">My Scorecard</string>
    <string name="retry">Retry</string>
    <string name="chatbot">Chat Support</string>
    <string name="rewardpoints">Reward Points</string>
    <string name="press_again_to_exit">Press once again to Exit</string>
    <string name="optingAttempt">Please Note : Re-attempt will not affect your Current Rank</string>
    <string name="proceed">Proceed</string>
    <string name="finish">Finish</string>
    <string name="rs">\u20B9</string>
    <string name="blackdot">\u25CF</string>
    <string name="purchased">Purchased</string>
    <string name="yourrank">Your Rank</string>
    <string name="totalUser">Total User</string>
    <string name="try_again">Try Again</string>
    <string name="Invoice">Course Invoice</string>
    <string name="attempted">Attempted</string>
    <string name="notattempted">Not Attempted</string>
    <string name="choose_language">Choose Your Preferred Language</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="continuee">Continue</string>
    <string name="by_signing_up">By Signup you agree to our</string>
    <string name="get_your_doubts_resolved">Get your Doubts Resolved</string>
    <string name="bank_exam">Bank Exams</string>
    <string name="india_trusted_app"> Don’t worry ! Just fill in your registered mobile number and we’ll send you a OTP to reset your password. </string>
    <string name="signin">Login</string>
    <string name="get_tips">Get Tips and Preparation strategy\</string>
    <string name="buy_now">BUY NOW</string>
    <string name="checkout_now">CONTINUE TO PAY</string>
    <string name="home">Home</string>
    <string name="my_notes">My Notes</string>
    <string name="my_exam_selection">My Exam Selection</string>
    <string name="total_test">Total Number of Tests</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="coins">Coins</string>
    <string name="free">Free for Students</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="can_change_lang">Please select your language</string>
    <string name="skip">Skip</string>
    <string name="welcome_to_mme">Welcome to Utkarsh</string>
    <string name="interactive_video_leactures">Interactive Video Lectures</string>
    <string name="simple_covering_videos">Simple and Effective videos covering all concepts</string>
    <string name="unlimited_quiz"><![CDATA[Unlimited Quiz & Practice]]></string>
    <string name="wide_range_of"><![CDATA[Wide range of topicwise quiz & practice test]]></string>
    <string name="all_india_test_series">All India Test Series</string>
    <string name="attempt_test">Attempt Test to compete at National Level</string>
    <string name="loading">Loading</string>
    <string name="congratulation">Congratulations !</string>
    <string name="attempt_now">ATTEMPT NOW</string>
    <string name="channel_description">This Notification Channel manages all the basic notifications of the Utkarsh App</string>
    <string name="channel_name">Utkarsh App Notification</string>
    <string name="language">Language</string>
    <string name="read_all">Read All</string>
    <string name="validity">Validity</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="coupon_applied">Apply Coupon</string>
    <string name="grand_total">Grand Total</string>
    <string name="have_a_coupon"><u>Have a coupon?</u></string>
    <string name="apply_a_coupon"><u>Apply coupon?</u></string>
    <string name="alert">Alert</string>
    <string name="alert_guest">Alert!!</string>
    <string name="reGrantPermissionMsg">You have denied the required permission. Please grant to proceed further.</string>
    <string name="resume">Resume</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="forgot_your_password">Forgot password?</string>
    <string name="course_not_found">Course not found.</string>
    <string name="profile_image_error">Failed to Upload Please Try Again Later</string>
    <string name="term_and_condition">Terms and Conditions</string>
    <string name="congratulation_msg">you have successfully changed  your password</string>
    <string name="go_back_login">Go Back To Login</string>
    <string name="resendotp"><b><u>Resend OTP</u></b></string>
    <string name="grantpermtext">Grant Access</string>
    <string name="grantpermdesctext">Change permissions in your device’s app settings.
        Giving Utkarsh access to Storage will enable us to access your storage,
        allowing you to read and practice hassle free.</string>
</resources>