<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp1"
            app:cardCornerRadius="@dimen/dp24"
            app:cardElevation="@dimen/dp5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginBottom="@dimen/dp20"
                android:orientation="vertical"
                android:padding="@dimen/dp16">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp40"
                    android:src="@drawable/lock" />

                <TextView
                    android:id="@+id/titleDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp40"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="center_horizontal"
                    android:text="@string/congratulation"
                    android:textColor="@color/color_071E57"
                    android:textSize="@dimen/post_text_size_x" />

                <TextView
                    android:id="@+id/msgDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/congratulation_msg"
                    android:textColor="@color/black_405461"
                    android:textSize="@dimen/post_text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="34dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp40"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="@dimen/dp24"
                        android:layout_marginTop="@dimen/dp4"
                        android:layout_marginRight="@dimen/dp24"
                        android:layout_marginBottom="@dimen/dp4"
                        android:layout_weight="1"
                        android:background="@drawable/bg_round_corners_button"
                        android:fontFamily="@font/inter_medium"
                        android:padding="@dimen/dp5"
                        android:text="@string/go_back_login"
                        android:textAllCaps="false"
                        android:textColor="@color/blackApp"
                        android:textSize="@dimen/sp16" />


                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>