<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp10"
                android:padding="@dimen/dp10"
                android:src="@drawable/back_gray" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="51dp"
                android:layout_toRightOf="@+id/iv_back"
                android:ellipsize="end"
                android:fontFamily="@font/inter_bold"
                android:text="@string/forget_password"
                android:textColor="@color/blackApp"
                android:textSize="@dimen/sp18" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp20"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ll1"
                        android:layout_centerInParent="true"
                        android:background="@drawable/forgot_password" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="22dp"
                        android:layout_marginTop="@dimen/dp16"
                        android:layout_marginRight="@dimen/dp22"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:letterSpacing=".01"
                        android:text="@string/india_trusted_app"
                        android:textColor="@color/black_405461"
                        android:textSize="@dimen/sp15" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp22"
                        android:background="@drawable/round_corner_border_login_signup"
                        android:gravity="bottom"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/dp12"
                        android:paddingBottom="@dimen/dp12">

                        <ImageView
                            android:id="@+id/imagestate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginLeft="@dimen/dp10"
                            android:layout_marginRight="@dimen/dp10"
                            android:padding="1dp"
                            android:src="@mipmap/flag" />

                        <TextView
                            android:id="@+id/tv_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_toRightOf="@id/imagestate"
                            android:fontFamily="@font/inter_semibold"
                            android:padding="@dimen/dp1"
                            android:text="+91"
                            android:textColor="@color/black"
                            android:textSize="@dimen/post_text_size" />

                        <EditText
                            android:id="@+id/mobileTV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_toRightOf="@id/tv_code"
                            android:background="@null"
                            android:hint="@string/mobile_no"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:paddingLeft="@dimen/dp10"
                            android:paddingRight="@dimen/dp10"
                            android:textSize="@dimen/post_text_size" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/forgetpasswordTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/resendotp"
                        android:textSize="@dimen/small_text_size"
                        android:visibility="gone" />


                    <Button
                        android:id="@+id/loginBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="54dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/bg_round_corners_button"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/continuee"
                        android:textAllCaps="false"
                        android:textColor="@color/profile_text_color"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>