<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Login.Activity.SignInActivity"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/signin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp12"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/term_and_condition"
                android:textColor="@color/blackApp"

                android:textSize="@dimen/sp18" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3.2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_logo_login" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|top"
                    android:padding="24dp"
                    android:text="@string/skip"
                    android:textColor="@color/blackApp"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:visibility="gone">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/signLL"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6.8"
                android:background="@drawable/round_top_corners"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/signInUpLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/dp40"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="@dimen/dp6"
                    android:background="@drawable/round_corner_border_layout"
                    android:orientation="horizontal"
                    android:padding="1dp">

                    <TextView
                        android:id="@+id/signInTextView"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_black_bg"
                        android:fontFamily="@font/inter_semibold"
                        android:gravity="center"
                        android:text="@string/signin"
                        android:textColor="@color/blackApp"
                        android:textSize="@dimen/sp15"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/signUpTextView"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_white_bg"
                        android:fontFamily="@font/inter_semibold"
                        android:gravity="center"
                        android:text="@string/sign_up"
                        android:textColor="@color/black_overlay"
                        android:textSize="@dimen/sp15"
                        android:textStyle="bold">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fourFragmentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:orientation="horizontal"
                    android:paddingTop="4dp">


                </LinearLayout>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabanim_tabs"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/white"
                    android:visibility="visible" />

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/tabanim_viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>